apps/finances/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firefly-ingress
  namespace: firefly
spec:
  ingressClassName: traefik
  rules:
  - host: "firefly-ilyas.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: firefly-service
            port:
              number: 80
